fix: layout issues
- error when non-authenticated user tries to like question/answer
- disabled answer post for non-authenticated users
- print css

--- a/src/public/styles/question-card.css
+++ b/src/public/styles/question-card.css
@@ -94,3 +94,10 @@ img {
     transition: all .3s;
     transform: scale(1.3);
 }
+
+div[id*='-error']{
+    margin-bottom: 0;
+    margin-top: 0.5rem;
+    font-size: 0.75rem;
+    pointer-events: none;
+}
